--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.code_quiz_app">
-   <application
-        android:label="code_quiz_app"
+  <application android:label="CodeQuiz" 
+        android:extractNativeLibs= "true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
